# impulse_chat

./: compose.yaml  pyproject.toml
impulse_chat/: db.sqlite3  manage.py
impulse_chat/chat/: consumers.py  urls.py  views.py
impulse_chat/chat/static/css/: style.css
impulse_chat/chat/static/js/: script.js
impulse_chat/chat/templates/: base.html  lobby.html
impulse_chat/impulse_chat/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
